<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup">

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textView"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:inputType="text"
        android:hint="@string/first_name" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_toRightOf="@id/first_name"
        android:inputType="text"
        android:hint="@string/last_name" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/first_name"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/gender"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:inputType="text"
        android:hint="@string/gender" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/gender"
        android:inputType="date"
        android:hint="@string/dob" />

    <EditText
        android:id="@+id/password"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dob"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnShowHide"
        style="@style/myStyle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/dob"
        android:layout_toRightOf="@id/password"
        android:layout_marginLeft="50dp"
        android:text="@string/btn"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnShowHideConfirm_password"
        style="@style/myStyle"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_toRightOf="@id/confirm_password"
        android:layout_marginLeft="10dp"
        android:text="@string/btn"
        android:textSize="12sp" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:layout_marginLeft="10dp" />

    <TextView
        android:id="@+id/agree"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_password"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="9dp"
        android:layout_toRightOf="@id/checkbox"
        android:hint="@string/agree"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox"
        android:layout_centerInParent="true"
        android:text="@string/register" />

    <TextView
        android:id="@+id/setTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegister"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp" />
</RelativeLayout>